# VoiceCloningFakeAudioDetection

./: .gitignore  CheckResults.ipynb  README.md  TTS API.ipynb  VoiceCloning.ipynb  bash_utilities.sh  compute-cluster-gpu.yaml  compute-cluster.yaml  conda.yaml  directory_structure.py  environment.yaml  extensions.py  job.yaml  mount_blob_store.sh  nist_preparation.sh  piper_preprocess.sh  piper_train.sh  pyproject.toml  setup.sh  train_tacotron2.sh  utilities.py
job_definition/: compute-cluster-gpu.yaml  job.yaml  ssh_key_pair  ssh_key_pair.pub
job_definitions/: ssh_key_pair  ssh_key_pair.pub
job_definitions/EvaFineTuneCss10Vits/: job.yaml
job_definitions/classification_wav2vec/: pipeline.yaml  prediction_job.yaml  prediction_job_mock.yaml  prediction_pipeline.yaml  prediction_pipeline_cloned.yaml  prediction_pipeline_mock.yaml  prepare_common_voice_audio_list.yaml  prepare_data_component.yaml  prepare_timit_audio_list.yaml  train_component.yaml
job_definitions/computes/: compute-cluster-cheap.yaml  compute-cluster-gpu-classification.yaml  compute-cluster-gpu-power.yaml  compute-cluster-gpu.yaml  compute-cluster-prediction.yaml  compute-cluster.yaml
job_definitions/environments/: Dockerfile  conda.yaml  install_conda_dependencies.sh  predict-environment.yaml  prepare-common-voice-audio-list-environment.yaml  voice-classification-prepare-data-component-environment.yaml  voice-classification-train-environment-conda.yaml  voice-classification-train-environment.yaml  voice-cloning-job-environment.yaml
job_definitions/eva_VITS_scratch/: job.yaml
notebooks/: Data Exploration - Common Voice.ipynb  Data Preparation - Eva Whatsapp.ipynb  Data Preparation - TIMIT Dataset.ipynb  Synthesize - Chosen model.ipynb  Synthesize - TTS API.ipynb  Synthesize - Training Results.ipynb  TTS API.ipynb  Training - PiperTTS Eva Dataset.ipynb  Training - VITS From Scratch.ipynb  Training - YourTTS Fine Tune Pre Trained.ipynb  VoiceCloning.ipynb  extensions.py
notebooks/.ipynb_aml_checkpoints/: FineTunePreTrainedModel-checkpoint2023-8-16-7-59-42Z.ipynb
notebooks_classification/: CNN_voice_classification.ipynb  CNN_voice_prediction.ipynb  Data Preparation.ipynb  HuggingFace-Copy1.ipynb  HuggingFace.ipynb  HuggingFaceOriginal.ipynb  extensions.py
notebooks_cloning/: Data Exploration - Common Voice.ipynb  Data Preparation - Common Voice.ipynb  Data Preparation - Eva Whatsapp.ipynb  Data Preparation - TIMIT Dataset.ipynb  Synthesize - Chosen model.ipynb  Training - PiperTTS Eva Dataset.ipynb  Training - VITS Fine Tune Pre Trained.ipynb  common_imports.py  extract_common_voice_to_blob.sh  mount_blob_store.sh
src/: custom_formatter.py  train_script.py  train_script_2.py  train_script_prueba.py
src/EvaFineTuneCss10Vits/: overriden_config.json  speaker_ids.json
(+19 files in other folders)
