[tool.poetry]
name = "project6fakeaudiodetection"
version = "0.1.0"
description = ""
authors = ["Rubén Chuliá Mena <rubchume@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
jupyterlab = "^4.0.5"
pandas = "^2.0.3"
plotly = "^5.16.1"
ipywidgets = "7.7.1"
auditok = "^0.2.0"
pydub = "^0.25.1"
numpy = ">=1.24.0 <1.25.0"
typing-extensions = "^4.7.1"
mlflow = "^2.6.0"
pydantic = "1.10.9"
azureml-mlflow = "^1.53.0"

[tool.poetry.group.azure.dependencies]
azureml = "^0.2.7"
azure-ai-ml = "^1.9.0"
azureml-core = "^1.53.0"
azureml-fsspec = "^1.2.0"
azureml-tensorboard = "^1.53.0"

[tool.poetry.group.dev.dependencies]
jupyterlab-widgets = "^3.0.8"
jupyter-contrib-nbextensions = "^0.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
